correction contrast

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
     text-align: center;
     font-size: 24px;
     font-weight: 900;
-    color:  #755104 !important;
+    color:  #dca122 !important;
 
 }
 
